[gd_scene load_steps=4 format=3 uid="uid://codd0sfjcvg05"]

[ext_resource type="Script" uid="uid://crs777xecsrt4" path="res://scenes/player/player_interface.gd" id="1_x6a1n"]
[ext_resource type="Texture2D" uid="uid://dj27egggvc2nt" path="res://assets/ui/interface/selection_rect.png" id="2_u4r1x"]
[ext_resource type="PackedScene" uid="uid://bsh0v2nxk318h" path="res://scenes/player/camera.tscn" id="3_l5ywc"]

[node name="PlayerInterface" type="Control"]
layout_mode = 3
anchors_preset = 0
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1
script = ExtResource("1_x6a1n")
metadata/_edit_lock_ = true

[node name="Button" type="Button" parent="."]
layout_mode = 2
offset_right = 74.0
offset_bottom = 31.0
mouse_filter = 1
text = "Add barracks"

[node name="DeployUnitButton" type="Button" parent="."]
layout_mode = 2
offset_left = 77.0
offset_right = 178.0
offset_bottom = 31.0
mouse_filter = 1
text = "Build Turret"

[node name="SpinBox" type="SpinBox" parent="."]
layout_mode = 2
offset_top = 32.0
offset_right = 86.5625
offset_bottom = 63.0
mouse_filter = 1
value = 1.0

[node name="SelectionRect" type="NinePatchRect" parent="."]
layout_mode = 2
offset_left = 217.0
offset_top = 139.0
offset_right = 500.0
offset_bottom = 330.0
texture = ExtResource("2_u4r1x")
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3

[node name="Camera" parent="." instance=ExtResource("3_l5ywc")]

[connection signal="pressed" from="Button" to="." method="_on_barracks_added"]
[connection signal="pressed" from="DeployUnitButton" to="." method="_on_deploy_unit_button_pressed"]
